resolved fdo#34724 Jan1 or 1Jan without separating character is not date

Change-Id: I2cf02a26b81fa634c842df455de669f1c60241bc